--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
     search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 domain: "mamananama.github.io"
-url: "https://mamananama.github.io/blog/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mamananama.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username: jekyll
 plugins:
@@ -72,3 +72,12 @@ kramdown:
         block:
             line_numbers: true
             bold_every: 5
+
+tipue_search:
+  include:
+    pages: true
+    collections: [posts]
+  exclude:
+    files: [search.html, index.html, tags.html. categories, q_includes, _layouts, assets, scripts]
+    categories: []
+    tags: []
