--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Commit and push if changed
         run: |
+          git init
+          git remote add https://github.com/mamananama/mamananama.github.io.git
           git config --global user.email "blublobla.000@gmail.com"
           git config --global user.name "mamananama"
           git add -A
