--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,7 @@ jobs:
 
       - name: Commit and push if changed
         run: |
-          git init
-          git remote add https://github.com/mamananama/mamananama.github.io.git
-          git config --global user.email "blublobla.000@gmail.com"
-          git config --global user.name "mamananama"
+          # git config --global user.email "blublobla.000@gmail.com"
+          # git config --global user.name "mamananama"
           git add -A
           git diff --quiet && git diff --staged --quiet || (git commit -m "Automatically create category pages" && git push)
