Github actions yml update

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,64 @@ name: Create Category Pages
 on:
   push:
     branches:
+      - main  # 또는 여러분의 기본 브랜치 이름
+    paths:
+      - '_posts/**'
+
+jobs:
+  create-category-pages:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Create category pages
+        run: |
+          # 카테고리 디렉토리 생성
+          mkdir -p category
+
+          # _posts 디렉토리의 모든 마크다운 파일 처리
+          for file in _posts/*.md; do
+            # 파일에서 카테고리 추출
+            categories=$(sed -n '/^categories:/,/^[^ ]/p' "$file" | grep -v '^categories:' | sed 's/^- //' | tr -d '[]"' | tr ',' '\n')
+            
+            # 각 카테고리에 대해 처리
+            echo "$categories" | while read -r category; do
+              if [ ! -z "$category" ]; then
+                # 카테고리 페이지 파일 경로
+                category_file="categories/${category}.html"
+                
+                # 카테고리 페이지가 없으면 생성
+                if [ ! -f "$category_file" ]; then
+                  echo "---" > "$category_file"
+                  echo "layout: default" >> "$category_file"
+                  echo "title: $category" >> "$category_file"
+                  echo "permalink: categories/$category/" >> "$category_file"
+                  echo "---" >> "$category_file"
+                  echo "{% include category_post_list.html %}" >> "$category_file"
+                  
+                  echo "Created category page for $category"
+                fi
+              fi
+            done
+          done
+
+      - name: Commit and push if changed
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add -A
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Automatically create category pages" && git push)
+
+
+
+
+
+name: Create Category Pages
+
+on:
+  push:
+    branches:
       - main
     paths:
       - '_posts/**'
