--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Create Category Pages
 on:
   push:
     branches:
-      - main  # 또는 여러분의 기본 브랜치 이름
+      - main
     paths:
       - '_posts/**'
 
@@ -13,6 +13,22 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Create SSH Key
+        run: | # access key를 actions 내부 워크스페이스에 pem파일로 저장하고 권한을 확보
+          echo "${{ secrets.REPO_KEY }}" > ~/private-key.pem
+          chmod 600 ~/private-key.pem
+      - name: Create SSH directory # .ssh 디렉토리 생성
+        run: | 
+          mkdir -p ~/.ssh
+      - name: Add known host # known host에 해당 키를 추가
+        run: |
+          ssh-keyscan ${{ secrets.REMOTE_HOST }} >> ~/.ssh/known_hosts
+      - name: Copy files to remote server # github repo의 모든 파일을 target 경로에 복사함.
+        run: |
+          cd ${{ github.workspace }}
+          scp -i ~/private-key.pem -r ./* ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET }}
+          echo "Copied files to remote server"
 
       - name: Set up Git
         run: |
